center continue text in eproms, re-compile css from less

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -176,41 +176,6 @@ select:not([multiple]) {
   color: #FFF;
   background-color: #576e76;
 }
-.button--LR,
-.button--LR.data-show,
-#profileConsentList .button--LR{
-   opacity: 0;
-   width: 160px;
-   margin: 2em 0;
-}
-#profileConsentList .button--LR {
-  margin: 0 0.5em;
-  display: inline-block;
-}
-.button--LR.data-show,
-#profileConsentList .button--LR[data-show='true'] {
-    opacity: 1;
-}
-.button--LR.data-show,
-#profileConsentList .button--LR[data-show='false'] {
-    opacity: 0;
-}
-#profileConsentList .truenth-consent-status-header,
-#profileConsentList .truenth-consent-date-header,
-#profileConsentList .truenth-tou-table-text {
-  display: none;
-}
-#profileConsentList tr[data-tou-type='website terms of use'] {
-  display: none;
-}
-#profileSiteIDContainer, #mainDiv.profile .site-id-view {
-  display: none;
-}
-.consent-date-modal.fade {
-    -webkit-transition: opacity .7s ease-out !important;
-    -o-transition: opacity .7s ease-out !important;
-    transition: opacity .7s ease-out !important;
-}
 #fullSizeBox a[href*="register"] {
   display: none;
 }
@@ -415,8 +380,21 @@ div.right-panel {
   margin: auto;
 }
 /***** initial queries page style ****/
+.terms-container {
+  border-style:ridge;
+  max-height: 250px;
+  overflow: auto;
+  padding: 1em;
+  background-color:#F5F5F5;
+}
+#termsText {
+  padding: 0 1em;
+}
 #termsText.agreed {
   display: none;
+}
+#agreeLabel {
+  margin-left: 2em;
 }
 .terms-of-use-intro {
   display: none;
@@ -468,6 +446,13 @@ div.right-panel {
   margin: 1em auto;
   display: none;
 }
+.terms-container {
+  border-style:ridge;
+  max-height: 250px;
+  overflow: auto;
+  padding: 1em;
+  background-color:#F5F5F5;
+}
 #aboutForm {
   max-width: 100%;
   padding: 1em;
@@ -486,9 +471,43 @@ div.right-panel {
 #aboutForm .reg-complete-container {
   width: 350px;
   max-width: 100%;
-  margin: 1em 0;
+  margin: 1em auto;
   padding: 0.5em 0;
+  text-align: center;
   display: none;
+}
+#aboutForm #buttonsContainer {
+  width: 350px;
+  margin: 1em auto;
+  position: relative;
+  text-align: center;
+}
+#aboutForm #next {
+  opacity: 0;
+  transition: opacity 200ms ease-in;
+  position: absolute;
+  left: 0;
+  top: 0;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  padding: 1em;
+}
+#aboutForm #updateProfile {
+  opacity: 0;
+  transition: opacity 200ms ease-in;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  padding: 1em;
+}
+#aboutForm #next:disabled {
+  opacity: 0.6;
+}
+#aboutForm #next.open, #aboutForm #updateProfile.open {
+  opacity: 1;
+}
+#aboutForm #next span {
+  margin-left: 0.3em;
+  margin-right: 0.3em;
 }
 #aboutForm .iq-container {
   font-family: "akzidenz_grotesk_medium", Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -568,37 +587,6 @@ div.right-panel {
 }
 #aboutForm .bd-optional {
   display: none;
-}
-#aboutForm #buttonsContainer {
-  width: 150px;
-  margin: 1em 0;
-  position: relative;
-}
-#aboutForm #next, #aboutForm #updateProfile {
-  opacity: 0;
-  transition: opacity 200ms ease-in;
-  position: absolute;
-  left: 0;
-  top: 0;
-  letter-spacing: 4px;
-  text-transform: uppercase;
-  padding: 1em;
-}
-#aboutForm #next {
-  opacity: 1;
-  width: 110px;
-  max-width: 100%;
-  margin-left: 0.2em;
-}
-#aboutForm #next:disabled {
-  opacity: 0.6;
-}
-#aboutForm #next.open, #aboutForm #updateProfile.open {
-  opacity: 1;
-}
-#aboutForm #next span {
-  margin-left: 0.3em;
-  margin-right: 0.3em;
 }
 #aboutForm .iq-container .heading {
   position: absolute;
@@ -814,7 +802,7 @@ div.right-panel {
 }
 #accessCodeWrapper .disabled {
   background-color: #999;
-  opacity: 0.65;
+  opacity: 0.6;
 }
 #shortcut_alias {
   width: 140px;
@@ -1005,18 +993,12 @@ div.right-panel {
   transition: opacity 250ms ease-out;
   z-index: 1;
 }
+#patientsInstrumentList label,
+#patientsDownloadTypeList label {
+  font-size: 0.8em;
+}
 #patientsDownloadTypeList {
   margin-top: 0.5em;
-}
-.orglist-download-container {
-  display: inline-block;
-}
-.orglist-download-container div {
-  margin-left: 0.2em;
-  margin-bottom: 0.5em;
-}
-.orglist-download-container a {
-  color: #57675B;
 }
 .smaller-text {
   font-size: 0.85em;
@@ -1266,7 +1248,6 @@ div.right-panel {
   justify-content: space-around;
   flex-wrap: wrap;
   position: relative;
- /* background: #43484d;*/
   padding-bottom: 1em;
 }
 .portal-description {
@@ -1656,6 +1637,16 @@ div.noOrg-container span {
   position: relative;
   top: 1px;
 }
+.orglist-download-container {
+  display: inline-block;
+}
+.orglist-download-container div {
+  margin-left: 0.2em;
+  margin-bottom: 0.5em;
+}
+.orglist-download-container a {
+  color: #57675B;
+}
 #createProfileForm .title {
   margin-top: 5%;
 }
@@ -1818,19 +1809,6 @@ table.profile-audit-log TH,
 #userAssessementReport table {
   word-break: break-all;
   font-size: 0.94em;
-}
-.terms-container {
-  border-style:ridge;
-  max-height: 250px;
-  overflow: auto;
-  padding: 1em;
-  background-color:#F5F5F5;
-}
-#termsText {
-  padding: 0 1em;
-}
-#agreeLabel {
-  margin-left: 2em;
 }
 .profile-header {
   display: inline-block;
@@ -2104,17 +2082,6 @@ table.profile-audit-log TH,
 .radio-inline input[type=radio] {
   margin-left: -18px;
 }
-div.biopsy-option:last-of-type{
-  margin-top: 1px;
-}
-#biopsyDate {
-  width: 150px;
-  max-width: 100%;
-  display: inline-block;
-}
-#biopsyDateContainer {
-  min-height: 4.5em;
-}
 .modal-dialog {
   border-radius: 0;
 }
@@ -2144,10 +2111,6 @@ div.biopsy-option:last-of-type{
 }
 .modal label {
   font-size: 1em;
-}
-#patientsInstrumentList label,
-#patientsDownloadTypeList label {
-  font-size: 0.8em;
 }
 .modal button,
 .modal a.btn {
@@ -2207,6 +2170,17 @@ sub.pointer:hover {
 .tooltip.left .tooltip-arrow {
   border-left-color: #575a4d;
 }
+div.biopsy-option:last-of-type{
+  margin-top: 1px;
+}
+#biopsyDate {
+  width: 150px;
+  max-width: 100%;
+  display: inline-block;
+}
+#biopsyDateContainer {
+  min-height: 4.5em;
+}
 #consentContainer .fade {
   transition: opacity .45s ease-out;
 }
@@ -2264,6 +2238,41 @@ sub.pointer:hover {
   color: #7d826e;
   font-size: 0.9em;
   font-weight: bold;
+}
+.button--LR,
+.button--LR.data-show,
+#profileConsentList .button--LR{
+   opacity: 0;
+   width: 160px;
+   margin: 2em 0;
+}
+#profileConsentList .button--LR {
+  margin: 0 0.5em;
+  display: inline-block;
+}
+.button--LR.data-show,
+#profileConsentList .button--LR[data-show='true'] {
+    opacity: 1;
+}
+.button--LR.data-show,
+#profileConsentList .button--LR[data-show='false'] {
+    opacity: 0;
+}
+#profileConsentList .truenth-consent-status-header,
+#profileConsentList .truenth-consent-date-header,
+#profileConsentList .truenth-tou-table-text {
+  display: none;
+}
+#profileConsentList tr[data-tou-type='website terms of use'] {
+  display: none;
+}
+.consent-date-modal.fade {
+    -webkit-transition: opacity .7s ease-out !important;
+    -o-transition: opacity .7s ease-out !important;
+    transition: opacity .7s ease-out !important;
+}
+#profileSiteIDContainer, #mainDiv.profile .site-id-view {
+  display: none;
 }
 #identityVerificationContainer {
   padding: 2em 1.5em;
