draw orgs UI even if state/region not available for them, css fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1613,6 +1613,9 @@ div.right-panel {
   font-size: 0.95em;
   margin-top: 0.2em;
 }
+.noOrg-container label {
+  font-weight: normal;
+}
 input.clinic {
   margin-top: 6px;
 }
@@ -2298,6 +2301,7 @@ div.org-container legend {
 }
 div.org-container label.org-label {
   margin: 0.2em 0;
+  font-weight: normal;
 }
 div.org-container .text-muter {
   margin-bottom: 4px;
