--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1742,6 +1742,10 @@ div.right-panel {
   margin-top: 0.2em;
 }
 
+.noOrg-container label {
+  font-weight: normal;
+}
+
 input.clinic {
   margin-top: 6px;
 }
@@ -2482,6 +2486,7 @@ div.org-container {
   }
   label.org-label{
     margin: 0.2em 0;
+    font-weight: normal;
   }
   .text-muter {
     margin-bottom: 4px;
