--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -4,7 +4,7 @@
 {{ back_btn(PORTAL, _('Home')) }}
 
 <h3 class="tnth-headline">{{ _("Contact TrueNTH") }}</h3>
-<p>{{ _("You can use form below or write the TrueNTH team directly at") }} <a href="mailto:us.truenth.org+contact@gmail.com">us.truenth.org+contact@gmail.com</a>.</p>
+<p>{{ _("Use this form to get in touch with TrueNTH") }}</p>
 <div class="row">
   <div class="col-md-7">
 
