--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -427,6 +427,9 @@ div.right-panel {
   transition:margin ease .5s;
   margin: auto;
 }
+#termsContainer.website-consent-script #termsText {
+  padding: 1em 2.5em 2.5em 2.5em;
+}
 #termsText {
   padding: 0 1em;
 }
