display terms still in initial queries page after subject agreement

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -427,11 +427,14 @@ div.right-panel {
   transition:margin ease .5s;
   margin: auto;
 }
+#termsText {
+  padding: 0 1em;
+}
 #termsContainer.website-consent-script #termsText {
   padding: 1em 2.5em 2.5em 2.5em;
 }
-#termsText {
-  padding: 0 1em;
+#termsContainer.website-consent-script #termsText.agreed {
+  display: none;
 }
 #agreeLabel {
   margin-left: 2em;
