--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -387,13 +387,14 @@ div.right-panel {
   padding: 1em;
   background-color:#F5F5F5;
 }
-#termsContainer.website-consent-script #termsText {
-  padding: 1em 2.5em 2.5em 2.5em;
-}
 #termsText {
   padding: 0 1em;
 }
-#termsText.agreed {
+
+#termsContainer.website-consent-script #termsText {
+  padding: 1em 2.5em 2.5em 2.5em;
+}
+#termsContainer.website-consent-script #termsText.agreed {
   display: none;
 }
 #agreeLabel {
