--- a/portal/templates/gil/index.html
+++ b/portal/templates/gil/index.html
@@ -140,6 +140,11 @@
 
               };
             };
+            (function () {
+              if (/kpp/i.test(String(navigator.userAgent))) {
+                window.kp_Browser_clearCookies();
+              };
+            })();
         });
     </script>
   {% endblock %}
