remove duplicate logout button from completed assessment dashboard

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1343,6 +1343,9 @@ div.right-panel {
   position: relative;
   padding-bottom: 1em;
 }
+.portal-completed-container {
+  margin-top: -4em;
+}
 .portal-description {
   background: #43484d;
   border: 1px solid rgba(121, 121, 121, 1);
@@ -1698,8 +1701,8 @@ div.right-panel {
   #bdGroup .flex {
     flex-wrap: nowrap;
   }
-  #errorbirthday {   
-    display: none;    
+  #errorbirthday {
+    display: none;
   }
 }
 #userEthnicity label {
