--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1246,6 +1246,9 @@ div.right-panel {
   position: relative;
   padding-bottom: 1em;
 }
+.portal-completed-container {
+  margin-top: -4em;
+}
 .portal-description {
   background: #43484d;
   border: 1px solid rgba(121, 121, 121, 1);
