--- a/portal/templates/gil/index.html
+++ b/portal/templates/gil/index.html
@@ -1,6 +1,6 @@
 {% extends "gil/base.html" %}
 {% block title %}Truenth Home{% endblock %}
-{% block head %} {{super()}}{% endblock %}
+{% block head %} {{super()}} <script src="{{url_for('static', filename='js/kiosk_functions.js')}}"></script>{% endblock %}
 {% block main %}
     <main class="main">
       {{ super() }}
@@ -143,32 +143,8 @@
               };
             };
 
-            (function () {
-              function urlCallback() {
-                  if (sessionStorageDefined) sessionStorage.setItem("kppLoaded", true);
-                  setTimeout(function() { clearCookie();}, 500);
-              };
+            window.kp_Browser_clearCookies();
 
-              function clearCookie() {
-                window.kp_Browser_clearCookies();
-              };
-
-              function kppInit() {
-                var loaded = sessionStorageDefined && sessionStorage.getItem("kppLoaded");
-                var isKpp = /kpp/i.test(String(navigator.userAgent));
-                if (!loaded && isKpp) {
-                   var s = document.createElement('script');
-                   s.setAttribute('src', 'http://www.kioskproapp.com/api/new/kiosk_functions.js');
-                   s.onload = urlCallback();
-                   document.getElementsByTagName("head")[0].appendChild(s);
-                } else {
-                  if (isKpp) clearCookie();
-                };
-              };
-
-              kppInit();
-
-            })();
         });
     </script>
   {% endblock %}
