--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1698,8 +1698,8 @@ div.right-panel {
   #bdGroup .flex {
     flex-wrap: nowrap;
   }
-  #errorbirthday {   
-    display: none;    
+  #errorbirthday {
+    display: none;
   }
 }
 #userEthnicity label {
@@ -1985,6 +1985,11 @@ div.noOrg-container {
   margin-left: 8px;
   display: none;
   font-size: 1em;
+}
+
+#contactForm .post-contact-response {
+  padding: 0;
+  margin: 1em 0;
 }
 
 /*.loading-indicator {*/
