--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1839,6 +1839,11 @@ table.profile-audit-log TH,
   display: none;
   font-size: 1em;
 }
+
+#contactForm .post-contact-response {
+  padding: 0;
+  margin: 1em 0;
+}
 /*.loading-indicator {*/
 #loadingIndicator {
   /*display: none;*/
