--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -65,7 +65,7 @@
                                 return false;
                             };
                         };
-                    } return false;
+                    } else return false;
                 });
             });
         });
