add length limits to contact sender/email (front and back end)

--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -38,11 +38,11 @@
               <div class="field-group field-group__half">
                 <div class="field field__text">
                   <label>{{_("First Name")}}</label>
-                  <input class="field__input input-first-name" type="text" placeholder="{{_('First Name')}}" id="first-name" name="first-name"/>
+                  <input class="field__input input-first-name" type="text" placeholder="{{_('First Name')}}" id="first-name" name="first-name" maxlength="125"/>
                 </div>
                 <div class="field field__text">
                   <label>{{_("Last Name")}}</label>
-                  <input class="field__input input-last-name" type="text" placeholder="{{_('Last Name')}}" id="last-name" name="last-name"/>
+                  <input class="field__input input-last-name" type="text" placeholder="{{_('Last Name')}}" id="last-name" name="last-name" maxlength="125"/>
                 </div>
               </div>
               <div class="field-group">
@@ -54,7 +54,7 @@
               <div class="field-group">
                 <div class="field field__text">
                   <label>{{_("Subject")}}</label>
-                  <input class="field__input input-email" type="text" placeholder="{{_('Subject')}}" id="subject" name="subject"/>
+                  <input class="field__input input-email" type="text" placeholder="{{_('Subject')}}" id="subject" name="subject" maxlength="200"/>
                 </div>
               </div>
               <div class="field-group">
