--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -12,7 +12,7 @@
       <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
       <div class="form-group">
         <label for="sendername">{{ _("Name") }}</label>
-        <input type="text" class="form-control" name="sendername"
+        <input type="text" class="form-control" name="sendername" maxlength="250"
           id="sendername" data-error="{{ _('Please enter your name') }}"
           placeholder="{{ _('Your Name') }}" value="{{ sendername }}" required>
         <div class="help-block with-errors"></div>
@@ -27,7 +27,7 @@
       </div>
       <div class="form-group">
         <label for="subject">{{ _("Subject") }}</label>
-        <input type="text" class="form-control" name="subject" id="subject" placeholder="{{ _('What is this about?') }}">
+        <input type="text" class="form-control" maxlength="200" name="subject" id="subject" placeholder="{{ _('What is this about?') }}">
       </div>
       <div class="form-group">
         <label for="body">{{ _("Text") }}</label>
