--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -26,6 +26,7 @@
     <script src="//rawgit.com/hhurz/tableExport.jquery.plugin/master/tableExport.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/extensions/export/bootstrap-table-export.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/extensions/filter-control/bootstrap-table-filter-control.js"></script>
+    <script src="{{ url_for('static', filename='js/moment.min.js') }}"></script>
 </head>
 {# sets container to full-width #}
 {%- set splashView = false -%}
