--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1470,14 +1470,14 @@
             <option value="America/New_York">{{_("America/New York")}}</option>
             <option value="Australia/Adelaide">{{_("Australia/Adelaide")}}</option>
             <option value="Australia/Brisbane">{{_("Australia/Brisbane")}}</option>
-            <option value="Australia/Broken_Hill">{{_("Australia/Broken_Hill")}}</option>
+            <option value="Australia/Broken_Hill">{{_("Australia/Broken Hill")}}</option>
             <option value="Australia/Canberra">{{_("Australia/Canberra")}}</option>
             <option value="Australia/Currie">{{_("Australia/Currie")}}</option>
             <option value="Australia/Darwin">{{_("Australia/Darwin")}}</option>
             <option value="Australia/Eucla">{{_("Australia/Eucla")}}</option>
             <option value="Australia/Hobart">{{_("Australia/Hobart")}}</option>
             <option value="Australia/Lindeman">{{_("Australia/Lindeman")}}</option>
-            <option value="Australia/Lord_Howe">{{_("Australia/Lord_Howe")}}</option>
+            <option value="Australia/Lord_Howe">{{_("Australia/Lord Howe")}}</option>
             <option value="Australia/Melbourne">{{_("Australia/Melbourne")}}</option>
             <option value="Australia/North">{{_("Australia/North")}}</option>
             <option value="Australia/Perth">{{_("Australia/Perth")}}</option>
@@ -1491,7 +1491,7 @@
         </select>
     </div>
     <div class="timezone-warning"></div>
-    <div class="timezone-error"></div>
+    <div class="timezone-error put-demo-error error-message"></div>
     <script>
     {% if person %}
     $(function() {
@@ -1501,6 +1501,16 @@
             $(".timezone-warning").html("");
             assembleContent.demo({{ person.id }},true, $(this), true);
             fillViews.timezone();
+        });
+        $("#profileTimeZone").on("change", function() {
+            setTimeout(function() { 
+                    if (!hasValue($(".timezone-error").text())) {
+                        window.location.reload(true);
+                    };
+
+                }, 
+                1000);
+            
         });
     });
     {% endif %}
