--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -243,7 +243,7 @@ $(document).ready(function() {
       if ($(this).is(":checked")) $("#_downloadMessage").text("");
   });
 
-  AT.initOrgsList(org_list);
+  AT.initOrgsList(org_list, 'patients');
 
 });
 
